@@ -15,6 +15,9 @@ In ISEM paper, we had with respect to size of datasets:
 
 We now would like to extend this.
 
+==2014-10-19==
+* Refined test cases for EKAW paper for estimating size of Global Cube, see http://linked-data-cubes.org/index.php?title=Global_Cube_Evaluation_EKAW14&action=edit&section=29
+
 ==2014-09-22==
 * Refined test cases for EKAW paper, see http://linked-data-cubes.org/index.php/Global_Cube_Evaluation_EKAW14
 * tagged version
